2007-02-12  Srinivasa Ragavan  <sragavan@novell.com>

	** Print migration updates from Ebby Wiselyn

	* e-printable.c: (e_printable_print_page), (e_printable_height),
	(e_printable_will_fit):
	* e-printable.h:

2007-01-08  Harish Krishnaswamy  <kharish@novell.com>

	* e-filter-bar.c: (build_items): Initialize ESearchBarItem
	type to ESB_ITEMTYPE_RADIO. Fixes #382860.
		
2006-12-04  Matthew Barnes  <mbarnes@redhat.com>

	Fixes bug #357970

	* e-calendar-item.c:
	* e-canvas-background.c:
	* e-filter-bar.c:
	* e-search-bar.c:
	* gal-combo-box.c:
	Don't call deprecated GLib / GDK functions.

	* e-colors.c (e_color_alloc): Remove unused function.

2006-12-04  Harish Krishnaswamy  <kharish@novell.com>

	* e-filter-bar.c: (build_items): Fix read of uninitialized
	ESearchBarItems. Partially fixes #381642.

2006-11-21  Harish Krishnaswamy  <kharish@novell.com>

	* e-filter-bar.c: (e_filter_bar_new): type should be
	initialized to 0, not NULL.

2006-11-03  Parthasarathi Susarla <ajaysusarla@gmail.com>

	** Fixes bug #357492
	* e-attachment-bar.c: (e_attachment_bar_remove_selected):
	put the attachment pointes into a temporary array. Free the
	pointers and the array after going thru the entire list
	This prevents a crash and also fixes the issue of only few 
	attachments getting deleted.

2006-10-11  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #360237 & bug #359236

	* e-filter-bar.c: (rule_advanced_response), (set_property): Fix for a
	crash while saving empty search.

2006-10-03  Francisco Javier F. Serrador  <serrador@tecknolabs.com>

	* e-dateedit.c: Make two strings translatable.

2006-10-02 Harish Krishnaswamy <kharish@novell.com>
	
	* Revert the previous patch as per rel-team
	disapproval on the commit.

2006-08-23 Ushveen kaur <kushveen@novell.com>

	** Fix for bug #329694

	* e-charset-picker.c : Translator comment added for "logical".

2006-09-28  Ushveen Kaur <kushveen@novell.com>

	** Fixes bug #335814
	