@@ -1,5 +1,11 @@
 2007-02-12  Srinivasa Ragavan  <sragavan@novell.com>
 
+	** Fix for bug #368983 from Ebby Wiselyn
+
+	* e-filter-bar.c: (menubar_activated):
+
+2007-02-12  Srinivasa Ragavan  <sragavan@novell.com>
+
 	** Print migration updates from Ebby Wiselyn
 
 	* e-printable.c: (e_printable_print_page), (e_printable_height),
